--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     <script src="js/main.js" defer></script>
 
-    <link rel="stylesheet" href="css/styles.css"> <!-- link css -->
+    <link rel="stylesheet" href="css/imports.css"> <!-- link css -->
 
     <title>Landing page</title>
 </head>
@@ -64,6 +64,42 @@
             </button>
         </div>
     </header><!--Header-->
+
+    <main id="content">
+        <section id="home">
+            <div class="shape"></div>
+            <div id="cta">
+                <h1 class="title">O sabor que vai até
+                    <span>você</span>
+                </h1>
+                <p class="description">
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Deleniti, eius enim consectetur ut nobis
+                    ipsa natus dolores ullam temporibus deserunt, Sequi.
+                </p>
+
+                <div id="cta_buttons">
+                    <a href="#" class="btn-default">Ver Cardapio</a>
+
+                    <a href="tel: +55555555555" id="phone_button">
+                        <button class="btn-default">
+                            <i class="fa-solid fa-phone"></i>
+                        </button>
+                        (51) 92342-3243
+                    </a>
+                </div>
+
+                <div class="social-media-buttons">
+                    <a href="#"><i class="fa-brands fa-whatsapp"></i></a>
+                    <a href="#"><i class="fa-brands fa-instagram"></i></a>
+                    <a href="#"><i class="fa-brands fa-facebook"></i></a>
+                </div>
+            </div>
+            <div id="banner">
+                <img src="images/hero.png" alt="">
+            </div>
+        </section>
+    </main>
+
 </body>
 
 </html>
