Commit in section menu

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                         <button class="btn-default">
                             <i class="fa-solid fa-phone"></i>
                         </button>
-                        (51) 92342-3243
+                        (51)92342-3243
                     </a>
                 </div>
 
@@ -98,6 +98,94 @@
                 <img src="images/hero.png" alt="">
             </div>
         </section>
+
+        <section id="menu">
+            <h2 class="section-title">Cardápio</h2>
+            <h3 class="section-subtitle">Nossos pratos especiais</h3>
+
+            <div id="dishes">
+                <div class="dish">
+                    <div class="dish-heart">
+                        <i class="fa-solid fa-heart"></i>
+                    </div>
+                    <img src="images/dish.png" class="dish-heart" alt="">
+                    <h3 class="dish-title">
+                        Lorem ipsum 
+                    </h3>
+                    <span class="dis-description">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto ex nesciunt reiciendis ratione sint, adipisci doloremque iusto assumenda alias, enim quis nulla laborum quisquam veniam debitis. Eaque iusto ab aliquam!
+                    </span>
+                    <div class="dish-rate">
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <span>(500+)</span>
+                    </div>
+                    <div class="dish-price">
+                        <h4>R$25,00</h4>
+                        <button class="btn-default">
+                            <i class="fa-solid fa-basket-shopping"></i>
+                        </button>
+                    </div>
+                </div>
+
+                <div class="dish">
+                    <div class="dish-heart">
+                        <i class="fa-solid fa-heart"></i>
+                    </div>
+                    <img src="images/dish2.png" class="dish-heart" alt="">
+                    <h3 class="dish-title">
+                        Lorem ipsum 
+                    </h3>
+                    <span class="dis-description">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto ex nesciunt reiciendis ratione sint, adipisci doloremque iusto assumenda alias, enim quis nulla laborum quisquam veniam debitis. Eaque iusto ab aliquam!
+                    </span>
+                    <div class="dish-rate">
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <span>(500+)</span>
+                    </div>
+                    <div class="dish-price">
+                        <h4>R$25,00</h4>
+                        <button class="btn-default">
+                            <i class="fa-solid fa-basket-shopping"></i>
+                        </button>
+                    </div>
+                </div>
+                <div class="dish">
+                    <div class="dish-heart">
+                        <i class="fa-solid fa-heart"></i>
+                    </div>
+                    <img src="images/dish3.png" class="dish-heart" alt="">
+                    <h3 class="dish-title">
+                        Lorem ipsum 
+                    </h3>
+                    <span class="dis-description">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto ex nesciunt reiciendis ratione sint, adipisci doloremque iusto assumenda alias, enim quis nulla laborum quisquam veniam debitis. Eaque iusto ab aliquam!
+                    </span>
+                    <div class="dish-rate">
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <span>(500+)</span>
+                    </div>
+                    <div class="dish-price">
+                        <h4>R$25,00</h4>
+                        <button class="btn-default">
+                            <i class="fa-solid fa-basket-shopping"></i>
+                        </button>
+                    </div>
+                </div>
+            </div>
+        </section>
+
     </main>
 
 </body>
