Commit in section menu

--- a/index.html
+++ b/index.html
@@ -108,12 +108,12 @@
                     <div class="dish-heart">
                         <i class="fa-solid fa-heart"></i>
                     </div>
-                    <img src="images/dish.png" class="dish-heart" alt="">
+                    <img src="images/dish.png" class="dish-img" alt="">
                     <h3 class="dish-title">
                         Lorem ipsum 
                     </h3>
                     <span class="dis-description">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto ex nesciunt reiciendis ratione sint, adipisci doloremque iusto assumenda alias, enim quis nulla laborum quisquam veniam debitis. Eaque iusto ab aliquam!
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. 
                     </span>
                     <div class="dish-rate">
                         <i class="fa-solid fa-star"></i>
@@ -135,12 +135,12 @@
                     <div class="dish-heart">
                         <i class="fa-solid fa-heart"></i>
                     </div>
-                    <img src="images/dish2.png" class="dish-heart" alt="">
+                    <img src="images/dish2.png" class="dish-img" alt="">
                     <h3 class="dish-title">
                         Lorem ipsum 
                     </h3>
                     <span class="dis-description">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto ex nesciunt reiciendis ratione sint, adipisci doloremque iusto assumenda alias, enim quis nulla laborum quisquam veniam debitis. Eaque iusto ab aliquam!
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
                     </span>
                     <div class="dish-rate">
                         <i class="fa-solid fa-star"></i>
@@ -155,18 +155,19 @@
                         <button class="btn-default">
                             <i class="fa-solid fa-basket-shopping"></i>
                         </button>
-                    </div>
+                    </div>                    
                 </div>
+
                 <div class="dish">
                     <div class="dish-heart">
                         <i class="fa-solid fa-heart"></i>
                     </div>
-                    <img src="images/dish3.png" class="dish-heart" alt="">
+                    <img src="images/dish3.png" class="dish-img" alt="">
                     <h3 class="dish-title">
                         Lorem ipsum 
                     </h3>
                     <span class="dis-description">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto ex nesciunt reiciendis ratione sint, adipisci doloremque iusto assumenda alias, enim quis nulla laborum quisquam veniam debitis. Eaque iusto ab aliquam!
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. 
                     </span>
                     <div class="dish-rate">
                         <i class="fa-solid fa-star"></i>
@@ -177,7 +178,33 @@
                         <span>(500+)</span>
                     </div>
                     <div class="dish-price">
-                        <h4>R$25,00</h4>
+                        <h4>R$20,00</h4>
+                        <button class="btn-default">
+                            <i class="fa-solid fa-basket-shopping"></i>
+                        </button>
+                    </div>
+                </div>
+                <div class="dish">
+                    <div class="dish-heart">
+                        <i class="fa-solid fa-heart"></i>
+                    </div>
+                    <img src="images/dish4.png" class="dish-img" alt="">
+                    <h3 class="dish-title">
+                        Lorem ipsum 
+                    </h3>
+                    <span class="dis-description">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                    </span>
+                    <div class="dish-rate">
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <span>(500+)</span>
+                    </div>
+                    <div class="dish-price">
+                        <h4>R$35,00</h4>
                         <button class="btn-default">
                             <i class="fa-solid fa-basket-shopping"></i>
                         </button>
