--- a/index.html
+++ b/index.html
@@ -213,6 +213,57 @@
             </div>
         </section>
 
+        <section id="testimonials">
+            <img src="images/chef.png" class="testimonials_chef" alt="Foto de uma mulher"> 
+
+            <div id="testimonials_content">
+                <h2 class="section-title">Depoimentos</h2>
+                <h3 class="section-subtitle">O que os clientes falam sobre nós</h3>
+
+                <div id="feedbacks">
+                    <div class="feedback">
+                        <img src="images/avatar.png" class="feedback-avatar" alt="Mulher sorringo">
+                        <div class="feedback-content">
+                            <p>
+                                Fulando de tal 
+                                <span>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                </span> 
+                            </p>
+                            <p>
+                                "Lorem, ipsum dolor sit amet consectetur adipisicing elit. Soluta nemo sint mollitia laboriosam maiores ipsa ab culpa, corrupti perferendis corporis officiis vitae quasi voluptatibus, similique quos."
+                            </p>
+                        </div>
+
+                    </div>
+                    <div class="feedback">
+                        <img src="images/avatar.png" class="feedback-avatar" alt="Mulher sorringo">
+                        <div class="feedback-content">
+                            <p>
+                                O tal fulano 
+                                <span>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                </span> 
+                            </p>
+                            <p>
+                                "Lorem, ipsum dolor sit amet consectetur adipisicing elit. Soluta nemo sint mollitia laboriosam maiores ipsa ab culpa, corrupti perferendis corporis officiis vitae quasi voluptatibus, similique quos."
+                            </p>
+                        </div>
+
+                    </div>
+                </div>
+                <button class="btn-default">Ver mais avaliações</button>
+            </div>
+        </section>
+
     </main>
 
 </body>
