--- a/index.html
+++ b/index.html
@@ -266,6 +266,20 @@
 
     </main>
 
+    <footer>
+        <img src="images/wave.svg" alt="wave">
+        <div id="footer_items">
+            <span id="copyright">
+                &copy 2024 Marcelo J Silva
+            </span>
+            <div class="social-media-buttons">
+                <a href="#"><i class="fa-brands fa-whatsapp"></i></a>
+                <a href="#"><i class="fa-brands fa-instagram"></i></a>
+                <a href="#"><i class="fa-brands fa-facebook"></i></a>
+            </div>
+
+        </div>
+    </footer>
 </body>
 
 </html>
