--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 
     <link rel="stylesheet" href="css/imports.css"> <!-- link css -->
 
+    <script src="https://unpkg.com/scrollreveal"></script> <!-- animasi scroll -->
     <title>Landing page</title>
 </head>
 
@@ -110,10 +111,10 @@
                     </div>
                     <img src="images/dish.png" class="dish-img" alt="">
                     <h3 class="dish-title">
-                        Lorem ipsum 
+                        Lorem ipsum
                     </h3>
                     <span class="dis-description">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
                     </span>
                     <div class="dish-rate">
                         <i class="fa-solid fa-star"></i>
@@ -137,7 +138,7 @@
                     </div>
                     <img src="images/dish2.png" class="dish-img" alt="">
                     <h3 class="dish-title">
-                        Lorem ipsum 
+                        Lorem ipsum
                     </h3>
                     <span class="dis-description">
                         Lorem ipsum dolor sit amet consectetur adipisicing elit.
@@ -155,7 +156,7 @@
                         <button class="btn-default">
                             <i class="fa-solid fa-basket-shopping"></i>
                         </button>
-                    </div>                    
+                    </div>
                 </div>
 
                 <div class="dish">
@@ -164,10 +165,10 @@
                     </div>
                     <img src="images/dish3.png" class="dish-img" alt="">
                     <h3 class="dish-title">
-                        Lorem ipsum 
+                        Lorem ipsum
                     </h3>
                     <span class="dis-description">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
                     </span>
                     <div class="dish-rate">
                         <i class="fa-solid fa-star"></i>
@@ -190,10 +191,10 @@
                     </div>
                     <img src="images/dish4.png" class="dish-img" alt="">
                     <h3 class="dish-title">
-                        Lorem ipsum 
+                        Lorem ipsum
                     </h3>
                     <span class="dis-description">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
                     </span>
                     <div class="dish-rate">
                         <i class="fa-solid fa-star"></i>
@@ -214,7 +215,7 @@
         </section>
 
         <section id="testimonials">
-            <img src="images/chef.png" class="testimonials_chef" alt="Foto de uma mulher"> 
+            <img src="images/chef.png" class="testimonials_chef" alt="Foto de uma mulher">
 
             <div id="testimonials_content">
                 <h2 class="section-title">Depoimentos</h2>
@@ -225,17 +226,19 @@
                         <img src="images/avatar.png" class="feedback-avatar" alt="Mulher sorringo">
                         <div class="feedback-content">
                             <p>
-                                Fulando de tal 
+                                Fulando de tal
                                 <span>
                                     <i class="fa-solid fa-star"></i>
                                     <i class="fa-solid fa-star"></i>
                                     <i class="fa-solid fa-star"></i>
                                     <i class="fa-solid fa-star"></i>
                                     <i class="fa-solid fa-star"></i>
-                                </span> 
+                                </span>
                             </p>
                             <p>
-                                "Lorem, ipsum dolor sit amet consectetur adipisicing elit. Soluta nemo sint mollitia laboriosam maiores ipsa ab culpa, corrupti perferendis corporis officiis vitae quasi voluptatibus, similique quos."
+                                "Lorem, ipsum dolor sit amet consectetur adipisicing elit. Soluta nemo sint mollitia
+                                laboriosam maiores ipsa ab culpa, corrupti perferendis corporis officiis vitae quasi
+                                voluptatibus, similique quos."
                             </p>
                         </div>
 
@@ -244,17 +247,19 @@
                         <img src="images/avatar.png" class="feedback-avatar" alt="Mulher sorringo">
                         <div class="feedback-content">
                             <p>
-                                O tal fulano 
+                                O tal fulano
                                 <span>
                                     <i class="fa-solid fa-star"></i>
                                     <i class="fa-solid fa-star"></i>
                                     <i class="fa-solid fa-star"></i>
                                     <i class="fa-solid fa-star"></i>
                                     <i class="fa-solid fa-star"></i>
-                                </span> 
+                                </span>
                             </p>
                             <p>
-                                "Lorem, ipsum dolor sit amet consectetur adipisicing elit. Soluta nemo sint mollitia laboriosam maiores ipsa ab culpa, corrupti perferendis corporis officiis vitae quasi voluptatibus, similique quos."
+                                "Lorem, ipsum dolor sit amet consectetur adipisicing elit. Soluta nemo sint mollitia
+                                laboriosam maiores ipsa ab culpa, corrupti perferendis corporis officiis vitae quasi
+                                voluptatibus, similique quos."
                             </p>
                         </div>
 
